--- a/models/ClassifierChain.ipynb
+++ b/models/ClassifierChain.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,16 +81,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "('Non-fiction',)"
+       "('Fiction', 'Novel')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,16 +101,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.21389771858053763"
+       "0.28958805744519683"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,28 +121,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1.72147443e-02, 1.51058648e-02, 7.16233608e-03, ...,\n",
-       "        2.08974561e-02, 2.67024022e-02, 9.92767704e-02],\n",
-       "       [1.76718943e-02, 4.16615476e-02, 5.92377236e-03, ...,\n",
-       "        3.17072751e-02, 5.53636296e-02, 5.21550105e-02],\n",
-       "       [1.37176395e-02, 3.43254111e-03, 4.62319807e-03, ...,\n",
-       "        3.13019134e-02, 9.40308113e-02, 4.12606396e-01],\n",
+       "array([[0.19997835, 0.0358366 , 0.02673108, ..., 0.02620826, 0.0219563 ,\n",
+       "        0.04747359],\n",
+       "       [0.127521  , 0.03953723, 0.05731229, ..., 0.06813338, 0.02401308,\n",
+       "        0.00853458],\n",
+       "       [0.14026314, 0.02803743, 0.11264337, ..., 0.2891638 , 0.01636124,\n",
+       "        0.14843827],\n",
        "       ...,\n",
-       "       [2.72033909e-02, 3.98331641e-03, 4.96796495e-03, ...,\n",
-       "        9.57766929e-03, 1.33925867e-02, 5.38736502e-01],\n",
-       "       [3.74163417e-02, 1.70208273e-02, 5.13934155e-03, ...,\n",
-       "        1.97324420e-02, 2.56839853e-02, 3.44652738e-02],\n",
-       "       [3.28612184e-02, 1.37359708e-02, 3.20471959e-03, ...,\n",
-       "        1.02788247e-04, 7.47673023e-04, 9.30191511e-02]])"
+       "       [0.10952384, 0.02176672, 0.08624203, ..., 0.25775045, 0.01720869,\n",
+       "        0.07862722],\n",
+       "       [0.10066258, 0.07224459, 0.09508248, ..., 0.1842166 , 0.05624017,\n",
+       "        0.05701813],\n",
+       "       [0.21828009, 0.07378297, 0.08263376, ..., 0.2160141 , 0.05508707,\n",
+       "        0.26089134]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,6 +150,45 @@
    "source": [
     "y_pred_prob = clf.predict_proba(features_test)\n",
     "y_pred_prob"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def findBestThresholdForLabel(predicted, expected):\n",
+    "    thresholds = np.arange(0.0,1.0, 0.005)\n",
+    "    best_thresh = 0.0\n",
+    "    best_accuracy = 0.0\n",
+    "    for t in thresholds:\n",
+    "       y_pred_new = (predicted >= t).astype(int)\n",
+    "       best_accuracy_cur = accuracy_score(expected, y_pred_new)\n",
+    "       if best_accuracy_cur >= best_accuracy:\n",
+    "           best_thresh = t\n",
+    "           best_accuracy = best_accuracy_cur\n",
+    "    return best_thresh\n",
+    "       \n",
+    "def getBestThresholdsForLables(predicted_list, expected_list):\n",
+    "    array_of_thresholds = []\n",
+    "    for i in range(0, len(predicted_list[0])):\n",
+    "        predicted_column = getColumn(predicted_list, i)\n",
+    "        expected_column = getColumn(expected_list, i)\n",
+    "        array_of_thresholds.append(findBestThresholdForLabel(predicted_column, expected_column))\n",
+    "    return array_of_thresholds\n",
+    "\n",
+    "def getColumn(list_of_labels, index) :\n",
+    "    return [l[index] for l in list_of_labels]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list_of_thresholds = getBestThresholdsForLables( y_pred_prob, labels_test)"
    ]
   },
   {
@@ -164,13 +203,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for key,values in enumerate(y_pred_prob):\n",
+    "    for key1,values1 in enumerate(values):\n",
+    "        y_pred_prob[key][key1] = int(values1 >= list_of_thresholds[key1])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.4806852614366982"
+       "0.4069765217472451"
       ]
      },
      "execution_count": 14,
@@ -179,7 +229,27 @@
     }
    ],
    "source": [
-    "F1Measure(labels_test, y_pred_new)"
+    "F1Measure(labels_test, y_pred_prob)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.12962962962962962"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy_score(labels_test, y_pred_prob)"
    ]
   },
   {
@@ -190,7 +260,7 @@
     {
      "data": {
       "text/plain": [
-       "0.051728832017424446"
+       "0.3379678620419364"
       ]
      },
      "execution_count": 15,
@@ -199,7 +269,7 @@
     }
    ],
    "source": [
-    "accuracy_score(labels_test, y_pred_new)"
+    "Accuracy(labels_test, y_pred_prob)"
    ]
   },
   {
@@ -210,7 +280,7 @@
     {
      "data": {
       "text/plain": [
-       "0.3664052135056782"
+       "0.42202625906329666"
       ]
      },
      "execution_count": 16,
@@ -219,7 +289,7 @@
     }
    ],
    "source": [
-    "Accuracy(labels_test, y_pred_new)"
+    "Precision(labels_test, y_pred_prob)"
    ]
   },
   {
@@ -230,7 +300,7 @@
     {
      "data": {
       "text/plain": [
-       "0.6395589436427986"
+       "0.4646531452087007"
       ]
      },
      "execution_count": 17,
@@ -239,27 +309,7 @@
     }
    ],
    "source": [
-    "Precision(labels_test, y_pred_new)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.4374638611229952"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Recall(labels_test, y_pred_new)"
+    "Recall(labels_test, y_pred_prob)"
    ]
   }
  ],
@@ -268,7 +318,7 @@
    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.9 64-bit",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -283,8 +333,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.9"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
